# pointcraft

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: README.md  g1_09LD1843.yaml  g1_09LD1845.yaml  g1_09LD1846.yaml  g1_09LD1867.yaml  g1_09LD1878.yaml  g1_09LD1885.yaml  g1_09LD1886.yaml  g1_09LD1897.yaml  g1_09LD2807.yaml  g1_09LD2814.yaml  g1_09LD2818.yaml  tokyo_station.yaml
data/: README.md
docs/: 00_PROJECT_BRIEF.md  01_RESEARCH_QUESTION.md  02_DATA_CONTRACT.md  03_EXPERIMENT_PROTOCOL.md  04_BASELINES.md  05_RELATED_WORK.md  06_DECISIONS.md  07_GOTCHAS.md  99_GLOSSARY.md  research_roadmap.md
experiments/: README.md
experiments/exp_000_smoke_test/: README.md
experiments/exp_001_m1_baseline/: README.md  metrics.json
experiments/exp_002_m2_overfit/: README.md  diagnostic_morph_shell.json  diagnostic_morph_shell_m5.json  metrics.json
experiments/exp_003_m2_generalize/: README.md  metrics.json  peak_confirm.json
experiments/exp_003_m2_generalize/peak_confirm_s0/: metrics.json
experiments/exp_004_m2_scaleup/: README.md  stageA_summary.json  stageB_summary.json
pointcraft/: __init__.py  lod2.py  stages.py  viewer.py
scripts/: README.md  analyze_stageA.py  analyze_stageB.py  build_combined_candidates.py  build_tile_index.py  check_spconv_env.py  diagnose_ground_coverage.py  diagnose_support_shell.py  export_alignment_3d.py  export_buildings.py  inspect_lod2_coverage.py  preflight_support.py  render_alignment.py  render_views.py  run_m0.py  run_m1_baseline.py  run_m2_generalize.py  run_m2_overfit.py  run_stageA_wd_ladder.sh  run_stageB_seeds.sh  scan_tiles.py  tokyo_station.py  verify_alignment_citygml.py
src/pointcraft/: __init__.py  pipeline.py
tasks/M0_data_pairing/: ACCEPTANCE.md  CHECKLIST.md  EXECUTION_PLAN.md  SESSION_LOG.md  TASK_SPEC.md
tasks/M1_deterministic_baseline/: ACCEPTANCE.md  CHECKLIST.md  SESSION_LOG.md  TASK_SPEC.md
tasks/M2_occupancy_completion/: ACCEPTANCE.md  CHECKLIST.md  GENERALIZATION_TASK_SPEC.md  SESSION_LOG.md  TASK_SPEC.md
tasks/M3_semantic_completion/: ACCEPTANCE.md  CHECKLIST.md  SESSION_LOG.md  TASK_SPEC.md
tasks/M4_unobserved_facade_completion/: ACCEPTANCE.md  CHECKLIST.md  SESSION_LOG.md  TASK_SPEC.md
tasks/M5_minecraft_demo/: ACCEPTANCE.md  CHECKLIST.md  SESSION_LOG.md  TASK_SPEC.md
test_data/: README.md
test_data/m0_data_pairing/: README.md  expected_metadata.json  tiny_lidar_points.csv
test_data/m0_voxel_grid/: README.md  expected_indices.json  tiny_bounds.json  tiny_points.csv
test_data/smoke/: README.md
tests/: README.md  test_baseline_predictors.py  test_border_margin.py  test_citygml.py  test_completion_model.py  test_metrics.py  test_morphological_boundary.py  test_pairing_alignment.py  test_partial_occupancy.py  test_sample_io.py  test_sparse_adapter.py  test_target_occupancy.py  test_voxel_grid.py
(+37 files in other folders)
